# smsru_api

./: .gitignore  AGENTS.md  LICENSE  README.md  async_test.py  pypidesc.md  pyproject.toml  requirements.txt  setup.py  sms.py  smsru.py  sync_test.py  tox.ini
.github/workflows/: build-and-publish.yml  draft-release.yml  publish-pypi.yml  python-package.yml  python-tests.yml  release-to-pypi.yml  test-build-and-draft.yml  test-build.yml
docs/: README.md  account.md  api-overview.md  callbacks.md  callcheck.md  messages.md  stoplist.md  sync-async.md
smsru_api/: __init__.py  aioclient.py  client.py  smsru.py  template.py
tests/: test_live.py  test_smsru.py
